[BBB-120] ✨Feat: 처리되지 않은 알고리즘 과제 해결 여부 갱신 요청 처리